--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,19 @@
-# Anthropic Claude API Key
+# Anthropic Claude API Key (for dialogue generation)
 # Get your API key from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# Voice Provider Configuration
+# Choose which TTS provider to use: 'openai' or 'elevenlabs'
+VOICE_PROVIDER=openai
+
+# OpenAI API Key (for voice generation with OpenAI TTS)
+# Get your API key from: https://platform.openai.com/api-keys
+# Pricing: ~$15 per 1M characters
+# Voices: alloy, echo, fable, onyx, nova, shimmer
+OPENAI_API_KEY=your_openai_api_key_here
+
+# ElevenLabs API Key (for high-quality voice cloning)
+# Get your API key from: https://elevenlabs.io/
+# Pricing: ~$30 per 1M characters (higher quality)
+# Supports custom voice cloning
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
