--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,14 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # Choose which TTS provider to use: 'openai' or 'elevenlabs'
 VOICE_PROVIDER=openai
 
+# Provider-Agnostic Voice API Key (RECOMMENDED)
+# Use this single key instead of provider-specific keys
+# The system auto-detects the provider from the key format:
+#   - OpenAI keys start with 'sk-' or 'sk-proj-'
+#   - ElevenLabs keys are 32-character hexadecimal strings
+# Priority: VOICE_API_KEY → provider-specific keys
+VOICE_API_KEY=your_api_key_here
+
 # OpenAI API Key (for voice generation with OpenAI TTS)
 # Get your API key from: https://platform.openai.com/api-keys
 # Pricing: ~$15 per 1M characters
